--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,9 +4,9 @@
   "description": "Nodejs Backend with tests for Blog List app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Mainul Islam",
   "license": "ISC",
@@ -17,8 +17,10 @@
     "mongoose": "^5.12.4"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "node"
