--- a/part7/extend-bloglist-frontend/package.json
+++ b/part7/extend-bloglist-frontend/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
@@ -21,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint .",
+    "lint": "eslint --fix --ext .js,.jsx .",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
