--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "library-backend.js",
   "scripts": {
+    "start":"node library-backend.js",
+    "dev": "nodemon library-backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mainul Islam",
