--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -2,17 +2,20 @@
   "name": "library-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "library-backend.js",
+  "main": "index.js",
   "scripts": {
-    "start":"node library-backend.js",
-    "dev": "nodemon library-backend.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mainul Islam",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.24.1",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
+    "mongoose": "^5.12.12",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {}
