--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.24.1",
+    "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
