--- a/part9/body-mass-index/package.json
+++ b/part9/body-mass-index/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "author": "Mainul Islam",
   "license": "ISC"
