--- a/part9/body-mass-index/package.json
+++ b/part9/body-mass-index/package.json
@@ -10,5 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mainul Islam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^15.6.1"
+  }
 }
